--- a/po/R-pt.po
+++ b/po/R-pt.po
@@ -1,14 +1,20 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: jaspMachineLearning 0.15\n"
+"Project-Id-Version: R 3.6.1\n"
+"Report-Msgid-Bugs-To: github.com/jasp-stats/jasp-issues/issues\n"
 "POT-Creation-Date: 2021-03-06 14:49\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2020-12-02 21:29+0000\n"
+"Last-Translator: JASP Stats <b.boutin@uva.nl>\n"
+"Language-Team: Portuguese <https://hosted.weblate.org/projects/jasp/"
+"jaspMachineLearning/pt/>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Language: en_US\n"
+"X-Source-Language: American English\n"
+"X-Qt-Contexts: true\n"
 
 msgid "K-Nearest Neighbors Classification"
 msgstr ""
@@ -25,8 +31,9 @@ msgstr ""
 msgid "Nearest neighbors"
 msgstr ""
 
+#, fuzzy
 msgid "Weights"
-msgstr ""
+msgstr "WLS Ponderado"
 
 msgid "Distance"
 msgstr ""
@@ -58,8 +65,9 @@ msgstr ""
 msgid "Validation Accuracy"
 msgstr ""
 
+#, fuzzy
 msgid "Test Accuracy"
-msgstr ""
+msgstr "Acuracia numerica"
 
 msgid "OOB Accuracy"
 msgstr ""
@@ -67,10 +75,13 @@ msgstr ""
 msgid "Please provide a target variable and at least %i predictor variable(s)."
 msgstr ""
 
-msgid "The model is optimized with respect to the <i>validation set accuracy</i>."
+msgid ""
+"The model is optimized with respect to the <i>validation set accuracy</i>."
 msgstr ""
 
-msgid "The optimum number of nearest neighbors is the maximum number. You might want to adjust the range of optimization."
+msgid ""
+"The optimum number of nearest neighbors is the maximum number. You might "
+"want to adjust the range of optimization."
 msgstr ""
 
 msgid "Manhattan"
@@ -82,14 +93,16 @@ msgstr ""
 msgid "Moment"
 msgstr ""
 
+#, fuzzy
 msgid "MLE"
-msgstr ""
+msgstr "ML"
 
 msgid "MVE"
 msgstr ""
 
+#, fuzzy
 msgid "t"
-msgstr ""
+msgstr "t"
 
 msgid "The model is optimized with respect to the <i>out-of-bag accuracy</i>."
 msgstr ""
@@ -106,7 +119,9 @@ msgstr ""
 msgid "Decision Boundary Matrix"
 msgstr ""
 
-msgid "Cannot create matrix: not enough numeric variables remain after removing factor variables. You need at least 2 numeric variables."
+msgid ""
+"Cannot create matrix: not enough numeric variables remain after removing "
+"factor variables. You need at least 2 numeric variables."
 msgstr ""
 
 msgid "ROC Curves Plot"
@@ -133,8 +148,9 @@ msgstr ""
 msgid "Evaluation Metrics"
 msgstr ""
 
+#, fuzzy
 msgid "Precision"
-msgstr ""
+msgstr "Regressão"
 
 msgid "Recall"
 msgstr ""
@@ -145,20 +161,25 @@ msgstr ""
 msgid "Support"
 msgstr ""
 
+#, fuzzy
 msgid "AUC"
-msgstr ""
+msgstr "AIC"
 
-msgid "Area Under Curve (AUC) is calculated for every class against all other classes."
+msgid ""
+"Area Under Curve (AUC) is calculated for every class against all other "
+"classes."
 msgstr ""
 
 msgid "Average / Total"
 msgstr ""
 
+#, fuzzy
 msgid "Class Proportions"
-msgstr ""
+msgstr "Opções de Módulos"
 
+#, fuzzy
 msgid "Data Set"
-msgstr ""
+msgstr "Dados"
 
 msgid "Training Set"
 msgstr ""
@@ -172,10 +193,15 @@ msgstr ""
 msgid "Test Set"
 msgstr ""
 
-msgid "You have specified more clusters than distinct data points. Please choose a number lower than %s."
+msgid ""
+"You have specified more clusters than distinct data points. Please choose a "
+"number lower than %s."
 msgstr ""
 
-msgid "R package error: The hclust clustering algorithm from the stats R package cannot handle data that has 65536 or more rows. We are working on a solution for this problem. Please try another algorithm in the meantime."
+msgid ""
+"R package error: The hclust clustering algorithm from the stats R package "
+"cannot handle data that has 65536 or more rows. We are working on a solution "
+"for this problem. Please try another algorithm in the meantime."
 msgstr ""
 
 msgid "K-Means Clustering"
@@ -202,11 +228,13 @@ msgstr ""
 msgid "R%s"
 msgstr ""
 
+#, fuzzy
 msgid "AIC"
-msgstr ""
+msgstr "AIC"
 
+#, fuzzy
 msgid "BIC"
-msgstr ""
+msgstr "BIC"
 
 msgid "Please provide at least 2 variables."
 msgstr ""
@@ -217,13 +245,19 @@ msgstr ""
 msgid "The model is optimized with respect to the <i>%s</i> value."
 msgstr ""
 
-msgid "The optimum number of clusters is the maximum number of clusters. You might want to adjust the range of optimization."
+msgid ""
+"The optimum number of clusters is the maximum number of clusters. You might "
+"want to adjust the range of optimization."
 msgstr ""
 
-msgid "Your cluster model contains 0 clusters and only Noisepoints, we advise to change the Eps and MinPts parameters."
+msgid ""
+"Your cluster model contains 0 clusters and only Noisepoints, we advise to "
+"change the Eps and MinPts parameters."
 msgstr ""
 
-msgid "Your cluster model contains 1 cluster and 0 Noisepoints. You could change the Eps and MinPts parameters."
+msgid ""
+"Your cluster model contains 1 cluster and 0 Noisepoints. You could change "
+"the Eps and MinPts parameters."
 msgstr ""
 
 msgid "The variables in the model are <b>unstandardized</b>."
@@ -241,8 +275,9 @@ msgstr ""
 msgid "Explained proportion within-cluster heterogeneity"
 msgstr ""
 
+#, fuzzy
 msgid "Within sum of squares"
-msgstr ""
+msgstr "Soma dos quadrados"
 
 msgid "Silhouette score"
 msgstr ""
@@ -259,8 +294,9 @@ msgstr ""
 msgid "The Total Sum of Squares of the %1$s cluster model is %2$s"
 msgstr ""
 
+#, fuzzy
 msgid "Value"
-msgstr ""
+msgstr "Valor"
 
 msgid "Maximum diameter"
 msgstr ""
@@ -268,8 +304,9 @@ msgstr ""
 msgid "Minimum separation"
 msgstr ""
 
+#, fuzzy
 msgid "Pearson's %s"
-msgstr ""
+msgstr "r de Pearson"
 
 msgid "Dunn index"
 msgstr ""
@@ -295,8 +332,9 @@ msgstr ""
 msgid "Elbow Method Plot"
 msgstr ""
 
+#, fuzzy
 msgid "WSS"
-msgstr ""
+msgstr "WLS"
 
 msgid "Number of Clusters"
 msgstr ""
@@ -325,16 +363,25 @@ msgstr ""
 msgid "The variable '%s' can't be both a predictor and a test set indicator."
 msgstr ""
 
-msgid "Your test set indicator should be binary, containing only 1 (included in test set) and 0 (excluded from test set)."
+msgid ""
+"Your test set indicator should be binary, containing only 1 (included in "
+"test set) and 0 (excluded from test set)."
 msgstr ""
 
-msgid "You have specified more nearest neighbors than there are observations in the training set. Please choose a number lower than %d."
+msgid ""
+"You have specified more nearest neighbors than there are observations in the "
+"training set. Please choose a number lower than %d."
 msgstr ""
 
-msgid "You have specified more folds than there are observations in the training and validation set. Please choose a number lower than %d."
+msgid ""
+"You have specified more folds than there are observations in the training "
+"and validation set. Please choose a number lower than %d."
 msgstr ""
 
-msgid "The minimum number of observations per node is too large. Ensure that `2 * Min. observations in node + 1` > `Training data used per tree * available training data` (in this case the minimum can be %.3f at most)."
+msgid ""
+"The minimum number of observations per node is too large. Ensure that `2 * "
+"Min. observations in node + 1` > `Training data used per tree * available "
+"training data` (in this case the minimum can be %.3f at most)."
 msgstr ""
 
 msgid "K-Nearest Neighbors Regression"
@@ -346,8 +393,9 @@ msgstr ""
 msgid "Random Forest Regression"
 msgstr ""
 
+#, fuzzy
 msgid "Boosting Regression"
-msgstr ""
+msgstr "Regressão"
 
 msgid "Penalty"
 msgstr ""
@@ -367,13 +415,17 @@ msgstr ""
 msgid "Please provide a target variable and at least %d predictor variable(s)."
 msgstr ""
 
-msgid "The model is optimized with respect to the <i>validation set mean squared error</i>."
+msgid ""
+"The model is optimized with respect to the <i>validation set mean squared "
+"error</i>."
 msgstr ""
 
 msgid "When %s is set to 0 linear regression is performed."
 msgstr ""
 
-msgid "The model is optimized with respect to the <i>out-of-bag mean squared error</i>."
+msgid ""
+"The model is optimized with respect to the <i>out-of-bag mean squared error</"
+"i>."
 msgstr ""
 
 msgid "Gaussian"
@@ -388,14 +440,16 @@ msgstr ""
 msgid "Predictive Performance Plot"
 msgstr ""
 
+#, fuzzy
 msgid "Observed test values"
-msgstr ""
+msgstr "momentos observados"
 
 msgid "Predicted test values"
 msgstr ""
 
+#, fuzzy
 msgid "Data Split"
-msgstr ""
+msgstr "Dividir"
 
 msgid "Train: %d"
 msgstr ""
@@ -406,8 +460,9 @@ msgstr ""
 msgid "Total: %d"
 msgstr ""
 
+#, fuzzy
 msgid "Validation: %d"
-msgstr ""
+msgstr "Citação:"
 
 msgid "Train and validation: %d"
 msgstr ""
@@ -427,11 +482,13 @@ msgstr ""
 msgid "Prior and Posterior Class Probabilities"
 msgstr ""
 
+#, fuzzy
 msgid "Prior"
-msgstr ""
+msgstr "Anterior"
 
+#, fuzzy
 msgid "Posterior"
-msgstr ""
+msgstr "RÂ² Posterior"
 
 msgid "Class Means in Training Data"
 msgstr ""
@@ -445,11 +502,13 @@ msgstr ""
 msgid "The null hypothesis specifies equal class means."
 msgstr ""
 
+#, fuzzy
 msgid "Tests of Equality of Covariance Matrices"
-msgstr ""
+msgstr "Matriz de covariância residual"
 
+#, fuzzy
 msgid "df"
-msgstr ""
+msgstr "gl:"
 
 msgid "p"
 msgstr ""
@@ -466,7 +525,9 @@ msgstr ""
 msgid "Points sorted by distance"
 msgstr ""
 
-msgid "%s-nearest neighbors \ndistance"
+msgid ""
+"%s-nearest neighbors \n"
+"distance"
 msgstr ""
 
 msgid "Maximum curvature = %s"
@@ -487,7 +548,8 @@ msgstr ""
 msgid "Need to specify fraction of maximum slope."
 msgstr ""
 
-msgid "Fraction of maximum slope must be positive and be less than or equal to 1."
+msgid ""
+"Fraction of maximum slope must be positive and be less than or equal to 1."
 msgstr ""
 
 msgid "Method must be either 'first' or 'curvature'."
@@ -523,8 +585,9 @@ msgstr ""
 msgid "OOB Change in %s%s Deviance"
 msgstr ""
 
+#, fuzzy
 msgid "Number of Trees"
-msgstr ""
+msgstr "Soma dos quadrados"
 
 msgid "Deviance Plot"
 msgstr ""
@@ -550,8 +613,9 @@ msgstr ""
 msgid "Classification Accuracy"
 msgstr ""
 
+#, fuzzy
 msgid "Mean Squared Error"
-msgstr ""
+msgstr "Erro padrão"
 
 msgid "Validation set"
 msgstr ""
@@ -586,8 +650,9 @@ msgstr ""
 msgid "Total Increase in Node Purity"
 msgstr ""
 
+#, fuzzy
 msgid "Regression Coefficients"
-msgstr ""
+msgstr "Coeficiente de Correlação Amostra"
 
 msgid "Coefficient (%s)"
 msgstr ""
@@ -595,8 +660,9 @@ msgstr ""
 msgid "Variable Trace Plot"
 msgstr ""
 
+#, fuzzy
 msgid "Coefficients"
-msgstr ""
+msgstr "Coeficiente de Mardia"
 
 msgid "Lambda Evaluation Plot"
 msgstr ""
@@ -609,3 +675,4 @@ msgstr ""
 
 msgid "%s 1 SE"
 msgstr ""
+
