--- a/po/QML-ru.po
+++ b/po/QML-ru.po
@@ -11,6 +11,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.16-dev\n"
+"X-Language: ru\n"
 "X-Qt-Contexts: true\n"
 
 msgctxt "Description|"
