typo Tne -> The

--- a/po/QML-es.po
+++ b/po/QML-es.po
@@ -2274,7 +2274,7 @@ msgid "Partition the remaining data in *k* parts."
 msgstr "Partir los datos restantes en *k* partes."
 
 msgctxt "DataSplit|"
-msgid "Tne number of folds to be used."
+msgid "The number of folds to be used."
 msgstr "El número de pliegues a usar."
 
 msgctxt "DataSplit|"
