--- a/po/QML-fr.po
+++ b/po/QML-fr.po
@@ -2059,7 +2059,7 @@ msgid "Partition the remaining data in *k* parts."
 msgstr ""
 
 msgctxt "DataSplit|"
-msgid "Tne number of folds to be used."
+msgid "The number of folds to be used."
 msgstr ""
 
 msgctxt "DataSplit|"
