--- a/po/QML-gl.po
+++ b/po/QML-gl.po
@@ -2257,7 +2257,7 @@ msgid "Partition the remaining data in *k* parts."
 msgstr "Partir os datos restantes en *k* partes."
 
 msgctxt "DataSplit|"
-msgid "Tne number of folds to be used."
+msgid "The number of folds to be used."
 msgstr "O número de pregos a usar."
 
 msgctxt "DataSplit|"
