--- a/po/QML-eo.po
+++ b/po/QML-eo.po
@@ -2057,7 +2057,7 @@ msgid "Partition the remaining data in *k* parts."
 msgstr ""
 
 msgctxt "DataSplit|"
-msgid "Tne number of folds to be used."
+msgid "The number of folds to be used."
 msgstr ""
 
 msgctxt "DataSplit|"
