--- a/po/QML-jaspMachineLearning.pot
+++ b/po/QML-jaspMachineLearning.pot
@@ -2057,7 +2057,7 @@ msgid "Partition the remaining data in *k* parts."
 msgstr ""
 
 msgctxt "DataSplit|"
-msgid "Tne number of folds to be used."
+msgid "The number of folds to be used."
 msgstr ""
 
 msgctxt "DataSplit|"
