--- a/po/QML-pl.po
+++ b/po/QML-pl.po
@@ -10,8 +10,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
+"X-Language: pl\n"
 "X-Generator: Weblate 5.6-rc\n"
 "X-Qt-Contexts: true\n"
+
 
 msgctxt "Description|"
 msgid "Machine Learning"
