--- a/po/QML-cs.po
+++ b/po/QML-cs.po
@@ -5,6 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Qt-Contexts: true\n"
+"X-Language: cs\n"
 
 msgctxt "Description|"
 msgid "Machine Learning"
